--- a/apps/memberApp/src/localization/zh/zh.json
+++ b/apps/memberApp/src/localization/zh/zh.json
@@ -268,32 +268,32 @@
     "normal": "正常",
     "recommendations_for": "{{level}}疲劳程度的建议",
     "emergency_contacts": "⚠️ 紧急联系人",
-    "emergency_message": "如果您感到严重疲劳或不适，请立即联系：",
+    "emergency_message": "如果您感到严重疲劳、眼部疲劳或不适，请联系：",
     "emergency_services": "紧急服务",
     "recommendations": {
       "severe": [
-        "立即停止驾驶并休息",
-        "如果可能，小睡20-30分钟",
-        "考虑请他人代驾",
-        "避免使用咖啡因作为临时解决方案"
+        "立即停止所有屏幕活动并让眼睛休息",
+        "在黑暗安静的房间小睡20-30分钟",
+        "考虑咨询眼科专业人士",
+        "避免咖啡因，专注于自然休息"
       ],
       "moderate": [
-        "休息15分钟",
-        "呼吸新鲜空气并进行轻度运动",
-        "保持水分补充",
-        "如果可能，考虑换人驾驶"
+        "从屏幕前休息15分钟",
+        "呼吸新鲜空气并进行轻度眼部运动",
+        "保持水分补充和良好姿势",
+        "考虑在设备上使用蓝光过滤器"
       ],
       "mild": [
-        "短暂休息5-10分钟",
-        "进行轻度伸展运动",
-        "确保通风良好",
-        "密切监控您的警觉性"
+        "从屏幕前短暂休息5-10分钟",
+        "进行眼部放松运动和眨眼练习",
+        "确保适当的照明和通风",
+        "定期监控眼部舒适度"
       ],
       "normal": [
-        "继续监控您的警觉性",
-        "保持良好的驾驶姿势",
+        "继续监控眼部健康",
+        "保持良好的屏幕人体工程学",
         "每2小时定期休息",
-        "在旅途中保持水分补充"
+        "保持水分补充和健康习惯"
       ]
     },
     "metric_descriptions": {
